syntax = 'proto3';

package shared.errors;

message MessageTypeError {
    ErrorType message = 1;
    enum ErrorType {
        UnknownProperty = 0;
    }
}
