syntax = 'proto3';

package shared.user.auth;

message LoginData {
    string email = 1;
    string password = 2;
}

message RegisterData {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    MessageType message = 1;

    enum MessageType {
        Error = 0;
        Success = 1;
    }
}
